fixing layout issues with ry-ry

--- a/SpunByMe/desktop/static/css/dashboard.less
+++ b/SpunByMe/desktop/static/css/dashboard.less
@@ -48,8 +48,8 @@ h2 {
 
 #header {
   position:relative;
-  top:5px;
-  left:20px;
+  padding-top:5px;
+  padding-left:20px;
 }
 
 .info {
@@ -77,6 +77,10 @@ h2 {
 }
 
 /* SEARCH BOX */
+
+#searchform {
+  margin-left: 340px;
+}
 
 fieldset.search {
   border: none;
@@ -110,4 +114,8 @@ fieldset.search {
 }
 .search button.btn:hover {
   background: #fbc900 url(search_bg.gif) no-repeat bottom right;
+}
+
+#embed {
+  margin-top: 20px;
 }
